--- a/components/Chart/Chart.module.css
+++ b/components/Chart/Chart.module.css
@@ -3,14 +3,14 @@
 .chart {
     list-style-type: none;
     padding: 0 0.4em;
-    margin: 0 auto;
+    margin: 0;
     font-size: 1.2em;
     width: 50%;
-    
-  font-family: "Reddit Sans Condensed", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  font-weight: 500  ;
+
+    font-family: "Reddit Sans Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-weight: 500;
 }
 
 .chart_title {
@@ -43,10 +43,9 @@
 @media (max-width: 768px) {
     .chart {
         list-style-type: none;
-        padding-bottom: 1em;
+        padding: 1em 0;
         margin: 0 auto;
         font-size: 1.2em;
         width: 90%;
-        border-bottom: 1px solid white;
     }
 }
