--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -46,6 +46,13 @@
     display: none;
 }
 
+.nodeco {
+    text-decoration: none;
+    color: white;
+}
+
+
+
 @media (max-width: 768px) {
 
     .nav_container {
